--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "googleapis": "^148.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
     "twilio": "^5.5.1"
