--- a/FrontEnd/.env
+++ b/FrontEnd/.env
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL="http://localhost:4000/billease"
+REACT_APP_GOOGLE_CLIENT_ID=676473586030-dao0p9uou8de0rg27pmccvv2egvos4ea.apps.googleusercontent.com
