--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "dependencies": "^0.0.1",
     "express": "^4.21.2",
