--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/aiplatform": "^4.1.0",
+    "@google/generative-ai": "^0.24.0",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
